# supermoto

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  setup.py  tasks.py
.github/workflows/: publish.yml
docs/: conf.py  helpers.html  index.html  index.rst  resources.html
supermoto/: ddbutil.py  helpers.py  resources.py
tests/: test_pydantic.py  test_resources.py
